--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -37,20 +37,16 @@ jobs:
       # When I can build linux/arm64 wheels, add that to build
       - name: Run Buildx
         run: |
-          cd
-          cd base-notebook
           docker buildx build \
             --platform linux/amd64,linux/arm/v7 \
             -t oulocl/vce-jupyter-stacks:${GITHUB_SHA::7} \
-            .
+            ./base-notebook
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       # Reusing the cache, push the images
       - name: Run Buildx
         run: |
-          cd
-          cd base-notebook
           docker buildx build \
             --platform linux/amd64,linux/arm/v7 \
             -t oulocl/vce-jupyter-base:${GITHUB_SHA::7} \
@@ -59,5 +55,5 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm/v7 \
             -t oulocl/vce-jupyter-base:latest \
-            . \
+            ./base-notebook \
             --push
