--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           docker buildx build \
             --platform linux/amd64,linux/arm/v7 \
-            -t oulocl/vce-jupyter-stacks:${GITHUB_SHA::7} \
+            -t ouvocl/vce-jupyter-stacks:${GITHUB_SHA::7} \
             ./base-notebook
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -49,11 +49,11 @@ jobs:
         run: |
           docker buildx build \
             --platform linux/amd64,linux/arm/v7 \
-            -t oulocl/vce-jupyter-base:${GITHUB_SHA::7} \
+            -t ouvocl/vce-jupyter-base:${GITHUB_SHA::7} \
             ./base-notebook \
             --push
           docker buildx build \
             --platform linux/amd64,linux/arm/v7 \
-            -t oulocl/vce-jupyter-base:latest \
+            -t ouvocl/vce-jupyter-base:latest \
             ./base-notebook \
             --push
