--- a/base-notebook/Dockerfile
+++ b/base-notebook/Dockerfile
@@ -4,7 +4,7 @@
 # Ubuntu 20.04 (focal)
 # https://hub.docker.com/_/ubuntu/?tab=tags&name=focal
 # OS/ARCH: linux/amd64, linux/arm/v7
-ARG ROOT_CONTAINER=python:3.8
+ARG ROOT_CONTAINER=ouvocl/base-py38
 ARG BASE_CONTAINER=$ROOT_CONTAINER
 
 FROM $BASE_CONTAINER
