--- a/pandas-notebook/Dockerfile
+++ b/pandas-notebook/Dockerfile
@@ -11,6 +11,8 @@ USER root
 # ffmpeg for matplotlib anim & dvipng+cm-super for latex labels
 RUN apt-get update && \
     apt-get install -y --no-install-recommends ffmpeg dvipng cm-super && \
+    # HDF5
+    apt-get install -y libhdf5-serial-dev && \
     # Pillow support?
     apt-get install -y libjpeg-dev zlib1g-dev libfreetype6-dev  libopenjp2-7 libtiff5 && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
