Table shas the hdf5 dependency?

--- a/pandas-notebook/Dockerfile
+++ b/pandas-notebook/Dockerfile
@@ -31,7 +31,7 @@ RUN pip install --no-cache --extra-index-url=https://www.piwheels.org/simple \
     'ipywidgets' \
     'ipympl' \
     'plotly' \
-    'tables' \
+    #'tables' \
     'seaborn' \
     'statsmodels' \
     'widgetsnbextension'\
