--- a/pandas-notebook/Dockerfile
+++ b/pandas-notebook/Dockerfile
@@ -36,9 +36,9 @@ RUN pip install --no-cache --extra-index-url=https://www.piwheels.org/simple \
 
 
 # Import matplotlib the first time to build the font cache.
-ENV XDG_CACHE_HOME="/home/${NB_USER}/.cache/"
+#ENV XDG_CACHE_HOME="/home/${NB_USER}/.cache/"
 
-RUN MPLBACKEND=Agg python -c "import matplotlib.pyplot"
+#RUN MPLBACKEND=Agg python -c "import matplotlib.pyplot"
 
 USER $NB_UID
 
