--- a/.github/workflows/buildx-scipy.yml
+++ b/.github/workflows/buildx-scipy.yml
@@ -40,7 +40,7 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm/v7 \
             -t ouvocl/vce-jupyter-scipy:${GITHUB_SHA::7} \
-            ./pandas-scipy
+            ./scipy-notebook
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
@@ -50,7 +50,7 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm/v7 \
             -t ouvocl/vce-jupyter-scipy:${GITHUB_SHA::7} \
-            ./pandas-notebook \
+            ./scipy-notebook \
             --push
           docker buildx build \
             --platform linux/amd64,linux/arm/v7 \
