--- a/pandas-notebook/Dockerfile
+++ b/pandas-notebook/Dockerfile
@@ -17,7 +17,7 @@ RUN apt-get update && \
 
 # Install Python 3 packages
 COPY ./wheelhouse/ ./wheelhouse
-RUN echo kiwisolver matplotlib Pillow numpy pandas pyzmq | xargs -n 1 pip install --no-cache --find-links=./wheelhouse && rm -r ./wheelhouse
+RUN echo kiwisolver matplotlib Pillow numpy pandas pyzmq PyYAML | xargs -n 1 pip install --no-cache --find-links=./wheelhouse && rm -r ./wheelhouse
 
 USER $NB_UID
 
@@ -31,7 +31,7 @@ RUN pip install --no-cache --extra-index-url=https://www.piwheels.org/simple \
     'xlrd'
 
 # Activate ipywidgets extension in the environment that runs the notebook server
-RUN   fix-permissions "/home/${NB_USER}" && jupyter nbextension enable --py widgetsnbextension --user
+RUN fix-permissions "/home/${NB_USER}" && jupyter nbextension enable --py widgetsnbextension --user
 
 
 # Import matplotlib the first time to build the font cache.
