--- a/.github/workflows/buildx-tm129.yml
+++ b/.github/workflows/buildx-tm129.yml
@@ -37,7 +37,7 @@ jobs:
           docker buildx build \
             --platform linux/amd64 \
             -t ouvocl/vce-tm129:x86_64-${GITHUB_SHA::7} \
-            --build-arg PROCESSOR_FAMILY=x86_64 \
+            --build-arg PROCESSOR_FAMILY=x64 \
             ./tm129-notebook
           docker buildx build \
             --platform linux/arm/v7 \
@@ -53,7 +53,7 @@ jobs:
           docker buildx build \
             --platform linux/amd64 \
             -t ouvocl/vce-tm129:x86_64-${GITHUB_SHA::7} \
-            --build-arg --build-arg PROCESSOR_FAMILY=x86_64 \
+            --build-arg --build-arg PROCESSOR_FAMILY=x64 \
             ./tm129-notebook \
             --push
           docker buildx build \
