FIx manifest creation

--- a/.github/workflows/buildx-tm129.yml
+++ b/.github/workflows/buildx-tm129.yml
@@ -62,5 +62,5 @@ jobs:
             --build-arg PROCESSOR_FAMILY=armv7l \
             ./tm129-notebook \
             --push
-          docker manifest create ouvocl/vce-tm129:latest ouvocl/vce-tm129:armv7l-${GITHUB_SHA::7} ouvocl/vce-tm129:x86_64-${GITHUB_SHA::7}
+          docker manifest create ouvocl/vce-tm129:latest --amend ouvocl/vce-tm129:armv7l-${GITHUB_SHA::7} --amend ouvocl/vce-tm129:x86_64-${GITHUB_SHA::7}
           docker manifest push ouvocl/vce-tm129:latest
