--- a/.github/workflows/buildx-tm129.yml
+++ b/.github/workflows/buildx-tm129.yml
@@ -44,23 +44,15 @@ jobs:
             -t ouvocl/vce-tm129:armv7l-${GITHUB_SHA::7} \
             --build-arg PROCESSOR_FAMILY=armv7l \
             ./tm129-notebook
+      
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       # Reusing the cache, push the images
       - name: Run Buildx
         run: |
-          docker buildx build \
-            --platform linux/amd64 \
-            -t ouvocl/vce-tm129:x86_64-${GITHUB_SHA::7} \
-            --build-arg --build-arg PROCESSOR_FAMILY=x64 \
-            ./tm129-notebook \
-            --push
-          docker buildx build \
-            --platform linux/arm/v7 \
-            -t ouvocl/vce-tm129:armv7l-${GITHUB_SHA::7} \
-            --build-arg PROCESSOR_FAMILY=armv7l \
-            ./tm129-notebook \
-            --push
+          docker push ouvocl/vce-tm129:x86_64-${GITHUB_SHA::7}
+          docker push ouvocl/vce-tm129:armv7l-${GITHUB_SHA::7}
+          
           docker manifest create ouvocl/vce-tm129:latest --amend ouvocl/vce-tm129:armv7l-${GITHUB_SHA::7} --amend ouvocl/vce-tm129:x86_64-${GITHUB_SHA::7}
           docker manifest push ouvocl/vce-tm129:latest
