--- a/.github/workflows/buildx-tm129.yml
+++ b/.github/workflows/buildx-tm129.yml
@@ -55,14 +55,14 @@ jobs:
             --platform linux/amd64 \
             -t ouvocl/vce-tm129:x86_64-${GITHUB_SHA::7} \
             --build-arg PROCESSOR_FAMILY=x64 \
-            ./tm129-notebook
+            ./tm129-notebook \
             --push
           
           docker buildx build \
             --platform linux/arm/v7 \
             -t ouvocl/vce-tm129:armv7l-${GITHUB_SHA::7} \
             --build-arg PROCESSOR_FAMILY=armv7l \
-            ./tm129-notebook
+            ./tm129-notebook \
             --push
 
       - name: Run  manifest
