Need experimental features - will they be supported?

--- a/.github/workflows/buildx-tm129.yml
+++ b/.github/workflows/buildx-tm129.yml
@@ -67,5 +67,6 @@ jobs:
 
       - name: Run  manifest
         run: |
+          export DOCKER_CLI_EXPERIMENTAL=enabled
           docker manifest create ouvocl/vce-tm129:latest --amend ouvocl/vce-tm129:armv7l-${GITHUB_SHA::7} --amend ouvocl/vce-tm129:x86_64-${GITHUB_SHA::7}
           docker manifest push ouvocl/vce-tm129:latest
