--- a/.github/workflows/buildx-pandas.yml
+++ b/.github/workflows/buildx-pandas.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Run Buildx
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7 \
+            --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/vce-jupyter-pandas:${GITHUB_SHA::7} \
             ./pandas-notebook
       - name: Login to DockerHub
@@ -45,12 +45,12 @@ jobs:
       - name: Run Buildx
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7 \
+            --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/vce-jupyter-pandas:${GITHUB_SHA::7} \
             ./pandas-notebook \
             --push
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7 \
+            --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/vce-jupyter-pandas:latest \
             ./pandas-notebook \
             --push
