Remove --no-index

--- a/tm129-notebook/Dockerfile
+++ b/tm129-notebook/Dockerfile
@@ -3,6 +3,8 @@ FROM ouvocl/vce-jupyter-scipy
 USER root
 COPY ./wheelhouse/ ./wheelhouse/
 # Save the effort of building wheels
+RUN echo jp_proxy_widget | xargs -n 1 pip install --no-cache --find-links=./wheelhouse
+# If we add wheels for every platfrom, we can add --no-index
 RUN echo SQLAlchemy PyYAML durable-rules lxml yarl multidict aiohttp psutil tflite_runtime | xargs -n 1 pip install --no-cache --find-links=./wheelhouse && rm -r ./wheelhouse
 
 USER $NB_USER
@@ -26,19 +28,19 @@ RUN wget https://nodejs.org/dist/latest-v15.x/node-${NODE_VERSION}-linux-${PROCE
 
 #RUN apt-get install -y gfortran libatlas-base-dev libopenblas-dev liblapack-dev
 
-USER $NB_USER
+#USER $NB_USER
 
 #RUN pip3 install --extra-index-url=https://www.piwheels.org/simple scipy
 
 #RUN pip3 wheel --wheel-dir=./wheelhouse scikit-learn && pip3 install --no-index --find-links=./wheelhouse scikit-learn
-COPY jp_proxy_widget-master.zip ./jp_proxy_widget-master.zip
-RUN pip3 wheel --wheel-dir=./wheelhouse ./jp_proxy_widget-master.zip &&  pip3 install --find-links=./wheelhouse --user --no-cache jp_proxy_widget  && pip3 install --user --no-cache --upgrade tqdm && pip3 install --user --no-deps nbev3devsim && pip3 install --user --extra-index-url=https://www.piwheels.org/simple --no-cache ou-tm129-py
+#COPY jp_proxy_widget-master.zip ./jp_proxy_widget-master.zip
+#RUN pip3 wheel --wheel-dir=./wheelhouse ./jp_proxy_widget-master.zip &&  pip3 install --find-links=./wheelhouse --user --no-cache jp_proxy_widget  && pip3 install --user --no-cache --upgrade tqdm && pip3 install --user --no-deps nbev3devsim && pip3 install --user --extra-index-url=https://www.piwheels.org/simple --no-cache ou-tm129-py
 #RUN pip3 install --extra-index-url=https://www.piwheels.org/simple  --user --no-cache ./jp_proxy_widget-master.zip   && pip3 install --user --no-cache --upgrade tqdm && pip3 install --user --no-deps nbev3devsim && pip3 install --user --extra-index-url=https://www.piwheels.org/simple --no-cache ou-tm129-py
 
 USER root
 COPY postBuild ./postBuild
 RUN chmod ugo+x ./postBuild
-USER $NB_USER
+#USER $NB_USER
 RUN ./postBuild 
 USER root
 RUN rm postBuild 
