--- a/pandas-notebook/Dockerfile
+++ b/pandas-notebook/Dockerfile
@@ -17,7 +17,8 @@ RUN apt-get update && \
 
 # Install Python 3 packages
 COPY ./wheelhouse/ ./wheelhouse
-RUN echo kiwisolver matplotlib Pillow numpy pandas pyzmq PyYAML | xargs -n 1 pip install --no-index --no-cache --find-links=./wheelhouse && rm -r ./wheelhouse
+# If we add wheels for every platfrom, we can add --no-index
+RUN echo kiwisolver matplotlib Pillow numpy pandas pyzmq PyYAML | xargs -n 1 pip install --no-cache --find-links=./wheelhouse && rm -r ./wheelhouse
 
 USER $NB_UID
 
