--- a/vce-notebook/Dockerfile
+++ b/vce-notebook/Dockerfile
@@ -5,6 +5,13 @@ LABEL maintainer="Tony Hirst <tony.hirst@open.ac.uk>"
 
 USER root
 
+
+# Install Python 3 packages
+COPY ./wheelhouse/ ./wheelhouse
+# If we add wheels for every platfrom, we can add --no-index
+RUN echo aiohttp kiwisolver lxml PyYAML yarl matplotlib| xargs -n 1 pip install --no-cache --find-links=./wheelhouse && rm -r ./wheelhouse
+
+
 RUN pip install --no-cache --extra-index-url=https://www.piwheels.org/simple \
     'cython' \
     'dill' \
