--- a/vce-notebook/Dockerfile
+++ b/vce-notebook/Dockerfile
@@ -10,7 +10,7 @@ USER root
 COPY ./wheelhouse/ ./wheelhouse
 # If we add wheels for every platfrom, we can add --no-index
 # What needs numpy & matplotlib?
-RUN echo aiohttp kiwisolver lxml PyYAML yarl numpy matplotlib| xargs -n 1 pip install --no-cache --find-links=./wheelhouse && rm -r ./wheelhouse
+RUN echo multidict aiohttp kiwisolver lxml PyYAML yarl Pillow numpy matplotlib psutil SQLAlchemy | xargs -n 1 pip install --no-cache --find-links=./wheelhouse && rm -r ./wheelhouse
 
 
 RUN pip install --no-cache --extra-index-url=https://www.piwheels.org/simple \
@@ -31,8 +31,14 @@ RUN pip install --no-cache --extra-index-url=https://www.piwheels.org/simple \
     'RISE' \
     'nb-extension-tagstyler' \
     'nb-extension-empinken' \
-    'nb-cell-execution-status'
+    'nb-cell-execution-status' \
+    'nbsearch'
 
+USER root
+COPY postBuild ./postBuild
+RUN chmod ugo+x ./postBuild
+RUN ./postBuild 
+RUN rm postBuild 
 
 # Activate ipywidgets extension in the environment that runs the notebook server
 RUN fix-permissions "/home/${NB_USER}" && jupyter nbextension enable --py widgetsnbextension --user
