--- a/.github/workflows/buildx-tm129.yml
+++ b/.github/workflows/buildx-tm129.yml
@@ -64,9 +64,15 @@ jobs:
             --build-arg PROCESSOR_FAMILY=armv7l \
             ./tm129-notebook \
             --push
-
+             
+          docker buildx build \
+            --platform linux/arm64 \
+            -t ouvocl/vce-tm129:aarch64-${GITHUB_SHA::7} \
+            --build-arg PROCESSOR_FAMILY=arm64 \
+            ./tm129-notebook
+            
       - name: Run  manifest
         run: |
           export DOCKER_CLI_EXPERIMENTAL=enabled
-          docker manifest create ouvocl/vce-tm129:latest --amend ouvocl/vce-tm129:armv7l-${GITHUB_SHA::7} --amend ouvocl/vce-tm129:x86_64-${GITHUB_SHA::7}
+          docker manifest create ouvocl/vce-tm129:latest --amend ouvocl/vce-tm129:aarch64-${GITHUB_SHA::7} --amend ouvocl/vce-tm129:armv7l-${GITHUB_SHA::7} --amend ouvocl/vce-tm129:x86_64-${GITHUB_SHA::7}
           docker manifest push ouvocl/vce-tm129:latest
