--- a/.github/workflows/buildx-vce-pandas.yml
+++ b/.github/workflows/buildx-vce-pandas.yml
@@ -37,8 +37,8 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/vce-pandas:${GITHUB_SHA::7} \
-            --build-arg BASE_IMAGE=ouvocl/vce-jupyter-base \
-            ./pandas-notebook
+            --build-arg BASE_IMAGE=ouvocl/vce-jupyter-pandas \
+            ./vce-notebook
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
