--- a/.github/workflows/buildx-vce-tm129.yaml
+++ b/.github/workflows/buildx-vce-tm129.yaml
@@ -48,10 +48,12 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/vce-tm129:${GITHUB_SHA::7} \
+            --build-arg BASE_IMAGE=ouvocl/base-tm129 \
             ./vce-notebook \
             --push
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/vce-tm129:latest \
+            --build-arg BASE_IMAGE=ouvocl/base-tm129 \
             ./vce-notebook \
             --push
