Dockerfile - experimental mounted dir read only

--- a/vce-notebook/Dockerfile
+++ b/vce-notebook/Dockerfile
@@ -12,8 +12,8 @@ USER root
 # If we add wheels for every platform, we can add --no-index
 # What needs numpy & matplotlib?
 # For the --mount we also need the py3.8 wheels if we have --no-index
-#RUN --mount=type=bind,target=./wheelhouse/,source=./wheelhouse/ echo multidict aiohttp kiwisolver lxml PyYAML yarl Pillow numpy matplotlib psutil SQLAlchemy | xargs -n 1 pip install --no-cache --find-links=./wheelhouse && rm -r ./wheelhouse
-RUN --mount=type=bind,target=./wheelhouse/,source=./wheelhouse/ echo multidict aiohttp kiwisolver lxml PyYAML yarl Pillow numpy matplotlib psutil SQLAlchemy | xargs -n 1 pip install --find-links=./wheelhouse && rm -r ./wheelhouse
+#RUN --mount=type=bind,target=./wheelhouse/,source=./wheelhouse/ echo multidict aiohttp kiwisolver lxml PyYAML yarl Pillow numpy matplotlib psutil SQLAlchemy | xargs -n 1 pip install --no-cache --find-links=./wheelhouse  
+RUN --mount=type=bind,target=./wheelhouse/,source=./wheelhouse/ echo multidict aiohttp kiwisolver lxml PyYAML yarl Pillow numpy matplotlib psutil SQLAlchemy | xargs -n 1 pip install --find-links=./wheelhouse 
 
 RUN pip install --no-cache --extra-index-url=https://www.piwheels.org/simple \
     'cython' \
