--- a/.github/workflows/buildx-scipy.yml
+++ b/.github/workflows/buildx-scipy.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
-            -t ouvocl/vce-jupyter-scipy:${GITHUB_SHA::7} \
+            -t ouvocl/jupyter-scipy:${GITHUB_SHA::7} \
             ./scipy-notebook
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -46,11 +46,11 @@ jobs:
         run: |
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
-            -t ouvocl/vce-jupyter-scipy:${GITHUB_SHA::7} \
+            -t ouvocl/jupyter-scipy:${GITHUB_SHA::7} \
             ./scipy-notebook \
             --push
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
-            -t ouvocl/vce-jupyter-scipy:latest \
+            -t ouvocl/jupyter-scipy:latest \
             ./scipy-notebook \
             --push
