--- a/.github/workflows/buildx-vce-pandas.yml
+++ b/.github/workflows/buildx-vce-pandas.yml
@@ -36,8 +36,8 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/vce-pandas:${GITHUB_SHA::7} \
-            --build-arg BASE_IMAGE=ouvocl/jupyter-pandas \
-            ./vce-notebook
+            --build-arg BASE_IMAGE=ouvocl/vce-notebook \
+            ./pandas-notebook
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
@@ -47,12 +47,12 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/vce-pandas:${GITHUB_SHA::7} \
-            --build-arg BASE_IMAGE=ouvocl/jupyter-pandas \
-            ./vce-notebook \
+            --build-arg BASE_IMAGE=ouvocl/vce-notebook \
+            ./pandas-notebook \
             --push
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/vce-pandas:latest \
-            --build-arg BASE_IMAGE=ouvocl/jupyter-pandas \
-            ./vce-notebook \
+            --build-arg BASE_IMAGE=ouvocl/vce-notebook \
+            ./pandas-notebook \
             --push
