--- a/.github/workflows/buildx-vce-scipy.yml
+++ b/.github/workflows/buildx-vce-scipy.yml
@@ -37,8 +37,8 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/vce-scipy:${GITHUB_SHA::7} \
-            --build-arg BASE_IMAGE=ouvocl/vce-jupyter-scipy \
-            ./vce-notebook
+            --build-arg BASE_IMAGE=ouvocl/vce-pandas \
+            ./scipy-notebook
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
@@ -48,12 +48,12 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/vce-scipy:${GITHUB_SHA::7} \
-            --build-arg BASE_IMAGE=ouvocl/vce-jupyter-scipy \
-            ./vce-notebook \
+            --build-arg BASE_IMAGE=ouvocl/vce-pandas \
+            ./scipy-notebook \
             --push
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/vce-scipy:latest \
-            --build-arg BASE_IMAGE=ouvocl/vce-jupyter-scipy \
-            ./vce-notebook \
+            --build-arg BASE_IMAGE=ouvocl/vce-pandas \
+            ./scipy-notebook \
             --push
