--- a/.github/workflows/buildx-vce.yml
+++ b/.github/workflows/buildx-vce.yml
@@ -38,6 +38,7 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/vce-notebook:${GITHUB_SHA::7} \
+            --build-arg BASE_IMAGE=ouvocl/jupyter-base \
             ./vce-notebook
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -48,10 +49,12 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/vce-notebook:${GITHUB_SHA::7} \
+            --build-arg BASE_IMAGE=ouvocl/jupyter-base \
             ./vce-notebook \
             --push
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             -t ouvocl/vce-notebook:latest \
+            --build-arg BASE_IMAGE=ouvocl/jupyter-base \
             ./vce-notebook \
             --push
