fettle pandas dockerfile
I am back to having no clue as to what is going on where. ALready need a holiday and year hasnlt even started yet:-(

--- a/pandas-notebook/Dockerfile
+++ b/pandas-notebook/Dockerfile
@@ -32,12 +32,14 @@ RUN pip install --no-cache --extra-index-url=https://www.piwheels.org/simple \
     'xlrd'
 
 # Activate ipywidgets extension in the environment that runs the notebook server
-RUN fix-permissions "/home/${NB_USER}" && jupyter nbextension enable --py widgetsnbextension --user
-
+RUN jupyter nbextension enable --py widgetsnbextension --user
 
 # Import matplotlib the first time to build the font cache.
 ENV XDG_CACHE_HOME="/home/${NB_USER}/.cache/"
 RUN bash -c 'MPLBACKEND=Agg python -c "import matplotlib.pyplot"'
+
+USER root
+RUN fix-permissions "/home/${NB_USER}"
 
 USER $NB_UID
 
