--- a/.github/workflows/Xbuildx-tm129-arm64.yaml
+++ b/.github/workflows/Xbuildx-tm129-arm64.yaml
@@ -1,4 +1,4 @@
-name: buildx-vce-tm129
+name: Xbuildx-tm129-arm64
 # Via: https://www.padok.fr/en/blog/multi-architectures-docker-iot
 on:
   release:
@@ -35,10 +35,11 @@ jobs:
       - name: Run Buildx
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 \
-            -t ouvocl/vce-tm129:${GITHUB_SHA::7} \
-            --build-arg BASE_IMAGE=ouvocl/base-tm129 \
-            ./vce-notebook
+            --platform linux/arm64 \
+            -t ouvocl/vce-tm129-64:aarch64-${GITHUB_SHA::7} \
+            --build-arg PROCESSOR_FAMILY=arm64 \
+            ./tm129-notebook
+      
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
@@ -46,14 +47,14 @@ jobs:
       - name: Run Buildx
         run: |
           docker buildx build \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 \
-            -t ouvocl/vce-tm129:${GITHUB_SHA::7} \
-            --build-arg BASE_IMAGE=ouvocl/base-tm129 \
-            ./vce-notebook \
+            --platform linux/arm64 \
+            -t ouvocl/vce-tm129-64:aarch64-${GITHUB_SHA::7} \
+            --build-arg PROCESSOR_FAMILY=arm64 \
+            ./tm129-notebook \
             --push
-          docker buildx build \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 \
-            -t ouvocl/vce-tm129:latest \
-            --build-arg BASE_IMAGE=ouvocl/base-tm129 \
-            ./vce-notebook \
-            --push
+          
+      - name: Run  manifest
+        run: |
+          export DOCKER_CLI_EXPERIMENTAL=enabled
+          docker manifest create ouvocl/vce-tm129-64:latest --amend ouvocl/vce-tm129-64:aarch64-${GITHUB_SHA::7}
+          docker manifest push ouvocl/vce-tm129-64:latest
