--- a/.github/workflows/Xbuildx-vce-tm129.yaml
+++ b/.github/workflows/Xbuildx-vce-tm129.yaml
@@ -1,4 +1,4 @@
-name: buildx-vce-tm129-content
+name: Xbuildx-vce-tm129
 # Via: https://www.padok.fr/en/blog/multi-architectures-docker-iot
 on:
   release:
@@ -30,19 +30,15 @@ jobs:
       - name: Available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
 
-      - name: Get content
-        run: |
-          wget -P downloads https://github.com/innovationOUtside/tm129-robotics2020/archive/master.zip
-          unzip -oq downloads/master.zip tm129-robotics2020-master/content/* -d downloads/
-          
       # Build the images, without pushing
       # When I can build linux/arm64 wheels, add that to build
       - name: Run Buildx
         run: |
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
-            -t ouvocl/vce-tm129-content:${GITHUB_SHA::7} \
-            ./tm129-content
+            -t ouvocl/vce-tm129:${GITHUB_SHA::7} \
+            --build-arg BASE_IMAGE=ouvocl/base-tm129 \
+            ./tm129-notebook
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
@@ -51,11 +47,13 @@ jobs:
         run: |
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
-            -t ouvocl/vce-tm129-content:${GITHUB_SHA::7} \
-            ./tm129-content \
+            -t ouvocl/vce-tm129:${GITHUB_SHA::7} \
+            --build-arg BASE_IMAGE=ouvocl/base-tm129 \
+            ./tm129-notebook \
             --push
           docker buildx build \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
-            -t ouvocl/vce-tm129-content:latest \
-            ./tm129-content \
+            -t ouvocl/vce-tm129:latest \
+            --build-arg BASE_IMAGE=ouvocl/base-tm129 \
+            ./tm129-notebook \
             --push
